--- a/src/index.scss
+++ b/src/index.scss
@@ -93,7 +93,8 @@ body{
 
 .chat .chat-history {
   padding: 20px;
-  border-bottom: 2px solid #fff
+  border-bottom: 2px solid #fff;
+  height: 700px;
 }
 
 .chat .chat-history ul {
