--- a/src/index.scss
+++ b/src/index.scss
@@ -94,20 +94,7 @@ body{
 .chat .chat-history {
   padding: 20px;
   border-bottom: 2px solid #fff;
-  height: 700px;
-}
-
-.chat .chat-history ul {
-  padding: 0
-}
-
-.chat .chat-history ul li {
-  list-style: none;
-  margin-bottom: 30px
-}
-
-.chat .chat-history ul li:last-child {
-  margin-bottom: 0px
+  height: 58vh;
 }
 
 .chat .chat-history .message-data {
